# chat-app

./: package.json
api/: .env
app/: .env  next.config.ts  package.json  (+2 more)
backend/: .env  Cargo.toml
backend/migrations/: 20241229031119_create-table-users.up.sql  20241229031338_create-table-profiles.up.sql  20241229031535_create-table-private-chats.up.sql  20241229032056_create-table-messages.up.sql  20241229174029_create-table-sessions.down.sql  20241229174029_create-table-sessions.up.sql
backend/src/: lib.rs  main.rs  path.rs  router.rs  server.rs
backend/src/api/: auth.rs  cors.rs  mod.rs  profile.rs
backend/src/config/: api_state.rs  bootstrap.rs  database.rs  environment.rs  mod.rs
backend/src/controllers/: login_controller.rs  logout_controller.rs  mod.rs  refresh_token_controller.rs  signup_controller.rs  verify_token_controller.rs
backend/src/controllers/auth_controllers/: login_controller.rs  mod.rs  verify_token_controller.rs
backend/src/controllers/profile_controllers/: create_profile_controller.rs  find_profile_controller.rs  update_profile_controller.rs
backend/src/middlewares/: auth_middleware.rs
backend/src/models/: auth_model.rs  mod.rs  profile_model.rs  session_model.rs  user_model.rs
backend/src/repositories/: mod.rs  session_repository.rs  user_repository.rs
backend/src/services/: mod.rs  profile_service.rs  session_service.rs  user_service.rs
backend/src/utils/: hash.rs  mod.rs  session.rs  token.rs  validation.rs
backend/tests/: bootstrap_tests.rs  config_database_tests.rs  config_environment_tests.rs  utils_token_tests.rs
(+123 files in other folders)
