[package]
name = "chat_bot_api"
version = "0.1.0"
edition = "2021"

[dependencies]

dotenv = "0.15.0"
chrono = "0.4.39"
sqlx = { version = "0.8.2", features = [
  "runtime-tokio-rustls",
  "macros",
  "mysql",
  "chrono",
] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }

[dev-dependencies]
# Testes e ambiente de desenvolvimento
sqlx-cli = { version = "0.8.2", features = ["mysql"] }
