[package]
name = "chat_app_api"
version = "0.1.0"
edition = "2021"
authors = ["Lucas Pedro da Hora <lucaspedro517@gmail.com>"]

[dependencies]

dotenv = "0.15.0"
chrono = { version = "0.4.39", features = ["serde"] }
sqlx = { version = "0.8.2", features = [
  "runtime-tokio-rustls",
  "macros",
  "mysql",
  "chrono",
] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
lazy_static = "1.5.0"
axum = "0.7.9"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
serde_json = "1.0.134"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
regex = "1.11.1"
bcrypt = "0.16.0"
jsonwebtoken = "9.3.0"


[dev-dependencies]
# Testes e ambiente de desenvolvimento
sqlx-cli = { version = "0.8.2", features = ["mysql"] }
